
https://www.koreaherald.com/view.php?ud=20241011050558
https://tokyocheapo.com/entertainment/event-posts/the-biggest-autumn-fireworks-festival-returns-to-tokyo-this-week/
https://www.koreaherald.com/view.php?ud=20241003050216
https://www.koreaherald.com/view.php?ud=20241006050139
https://www.koreaherald.com/view.php?ud=20241007050599
https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-early-halloween-yokai-and-local-festivals/