@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 02:36:14 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 02:42:50 +0800</lastBuildDate>
 
   <item>
   <title>東京秋季大盛事！煙火、海燈、萬聖節，10月份必去的10大活動</title>
@@ -19,5 +19,11 @@
   <description>東京活動（2024年10月7日至13日） 。日本的萬聖節與眾不同，東京在10月31日前會出現許多相關活動。這些活動包括超自然貓節和立川妖怪盂蘭盆舞等。如果你不喜歡恐怖的活動，可以前往遍布首都的許多市民節。。。立川妖怪盂蘭盆舞</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 02:36:14 +0800</pubDate>
+</item><item>
+  <title>東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街</title>
+  <link>https://www.famechos.me/news/東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街.html</link>
+  <description>在東京體驗傳統日本文化如何見到藝妓如果你錯過了在京都祇園見到藝妓的機會不要擔心在東京也有機會見到藝妓只要你知道在哪裡找藝妓是許多人嚮往的傳統日本文化體驗雖然京都...</description>
+  <category>Others</category>
+  <pubDate>Sat, 12 Oct 2024 02:42:50 +0800</pubDate>
 </item></channel>
 </rss>
