@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 02:38:44 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 02:42:50 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -49,5 +49,11 @@
   <description>aespa即將推出新迷你專輯aespa將於10月21日推出第五張迷你專輯官方已經上傳了一系列的預告內容包括六首歌曲的片段和一個專門的網站讓粉絲可以混合和下載主打歌曲的部分這張專輯的...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 02:38:44 +0800</pubDate>
+</item><item>
+  <title>東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街</title>
+  <link>https://www.famechos.me/news/東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街.html</link>
+  <description>在東京體驗傳統日本文化如何見到藝妓如果你錯過了在京都祇園見到藝妓的機會不要擔心在東京也有機會見到藝妓只要你知道在哪裡找藝妓是許多人嚮往的傳統日本文化體驗雖然京都...</description>
+  <category>Others</category>
+  <pubDate>Sat, 12 Oct 2024 02:42:50 +0800</pubDate>
 </item></channel>
 </rss>
